kubernetes_resources/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microsoft-a
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: microsoft-a
  type: ClusterIP
