kubernetes_resources/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microsoft-b
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: microsoft-b
  type: ClusterIP
