kubernetes_resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /service-A
        pathType: Prefix
        backend:
          service:
            name: microsoft-a
            port:
              number: 80
      - path: /service-B
        pathType: Prefix
        backend:
          service:
            name: microsoft-b
            port:
              number: 80
