kubernetes_resources/network-policy-b-to-a-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-b-to-a-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: microsoft-a
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: microsoft-b
